[package]
name = "unkprox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cstr_core = { version = "0.2.6", features = ["use_libc"] }
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"
image = "0.22.0"
jni = { version = "0.5", default-features = false }
libc = "0.2.135"
log = "0.4.17"
num-complex = "0.2"
socket2 = { version = "0.4.7", features = ["all"] }

[lib]
name = "unkprox"
crate-type = ["dylib"]
